# PaperAgent-AIInfra

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yaml  demo.py  docker-compose.yml  pyproject.toml
deploy/config/: config.yaml.example
docs/: MIGRATION.md  docker-deployment.md  user-guide.md
openspec/changes/add-time-range-filter/: tasks.md
openspec/specs/admin-dashboard/: spec.md
openspec/specs/citation-signal/: spec.md
openspec/specs/code-audit-cleanup/: spec.md
openspec/specs/code-dedup/: spec.md
openspec/specs/configurable-prompts/: spec.md
scripts/: backup.sh  check.sh  daemon.sh  deploy.sh  logs.sh  restore.sh  seed_older_works.py  start-local.sh  status.sh  stop.sh  web.sh
src/paper_agent/: __init__.py  __main__.py  citation_refresh.py  cli.py  config.py  daemon_heartbeat.py  models.py  pipeline.py  scheduler.py  subscriptions.py  unsubscribe.py
tests/: test_admin.py  test_admin_storage.py  test_citation_provider.py  test_citation_refresh.py  test_config.py  test_daemon_heartbeat.py  test_delivery_controls.py  test_doctor.py  test_email_notifier.py  test_fetcher.py  test_formatter.py  test_models.py  test_older_works.py  test_older_works_digest.py  test_pipeline.py  test_ranking.py  test_scheduler.py  test_scorer.py  test_storage.py  test_subscription_access_api.py  test_subscription_api.py  test_subscription_storage.py  test_subscriptions.py  test_unsubscribe.py  test_web_app.py  test_web_browsing.py  test_web_older_filter.py  test_web_storage.py
tests/js/: preferences.test.mjs
(+191 files in other folders)
