[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-agent"
version = "0.1.0"
description = "AI Infra 论文智能推送 Agent - 自动从 arXiv 抓取、筛选、推送高质量论文"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "arxiv>=2.1.0",
    "anthropic>=0.40.0",
    "apscheduler>=3.10.0",
    "click>=8.1.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
paper-agent = "paper_agent.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
